Add some new things ! 📂

--- a/cpz_company_web/css/main.css
+++ b/cpz_company_web/css/main.css
@@ -12,9 +12,139 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,900&display=swap');
 
 * {
-    padding: 10px;
+    padding: 0px;
     margin: 0px;
     font-weight: normal;
     font-size: normal;
     font-family: 'Raleway', sans-serif;
 }
+
+/* 📬 Home Page All Style : 📬 */
+/* 🎈 Navbar complety style : 🎈 */
+.home_page {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+
+.home_page #navbar {
+  grid-area: 1 / 1 / 2 / 6;
+  border-bottom: 2px solid #cbcbcb;
+  padding: 30px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
+.home_page #navbar .logo_app {
+  width: 110px;
+}
+
+.home_page #navbar .search_icon {
+  width: 22px;
+  height: 22px;
+  stroke: #a9a7b3;
+  stroke-width: 2px;
+  position: absolute;
+  margin-top: 42px;
+  margin-left: 19.7%;
+  z-index: 10;
+}
+
+.home_page #navbar .search_bar {
+  padding-left: 50px;
+  padding-right: 20px;
+  padding-top: 9px;
+  padding-bottom: 9px;
+  width: 45%;
+  border-radius: 20px;
+  border: 2px solid #a9a7b3;
+  font-size: 15px;
+  outline: none;
+  margin-left: 19%;
+  position: absolute;
+  margin-top: 35px;
+  z-index: 5;
+}
+
+.home_page #navbar #caddie_icon {
+  width: 27px;
+  height: 27px;
+  stroke: #616161;
+  stroke-width: 2px;
+  float: right;
+  margin-top: 43px;
+  cursor: pointer;
+  margin-right: 2.5%;
+  background-color: transparent;
+  border-color: transparent;
+}
+
+.home_page #navbar #love_icon {
+  width: 27px;
+  height: 27px;
+  stroke: #616161;
+  float: right;
+  margin-top: 43px;
+  cursor: pointer;
+  margin-right: 17px;
+  stroke-width: 2px;
+  background-color: transparent;
+  border-color: transparent;
+}
+
+.home_page #navbar #caddie_icon:hover { stroke: black; }
+.home_page #navbar #love_icon:hover { stroke: black; }
+
+.home_page #navbar .sidebar {
+  position: fixed;
+  top: 0;
+  right: -650px;
+  height: 100%;
+  width: 400px;
+  background-color: white;
+  box-shadow: 0px 0px 250px #6161615a;
+  transition: all 0.5s ease-in-out; 
+  z-index: 100;
+  padding: 30px;
+  border-top-left-radius: 15px;
+}
+
+.home_page #navbar .sidebar h1 {
+  font-weight: 350;
+  font-size: 20px;
+}
+
+.home_page #navbar .sidebar.open {
+  right: 0; 
+}
+
+.home_page #navbar .sidebar .close {
+  width: 25px;
+  height: 25px;
+  stroke: #616161;
+  background-color: transparent;
+  border-color: transparent;
+  cursor: pointer;
+  float: right;
+  margin-top: -35px;
+}
+/* 🎈 End of Navbar complety style ! 🎈 */
+
+.home_page #content_box {
+  grid-area: 2 / 1 / 6 / 6;
+  padding: 30px;
+}
+
+.home_page #content_box .ads {
+  background-color: black;
+  margin: -30px;
+  padding: 10px;
+  text-align: center;
+  color: white;
+  margin-bottom: 25px;
+  padding-top: 10px;
+  padding-bottom: 13px;         
+}
+/* 📬 End of Home Page All Style ! 📬 */
