--- a/cpz_company_web/css/main.css
+++ b/cpz_company_web/css/main.css
@@ -41,17 +41,6 @@
   width: 110px;
 }
 
-.home_page #navbar .search_icon {
-  width: 22px;
-  height: 22px;
-  stroke: #a9a7b3;
-  stroke-width: 2px;
-  position: absolute;
-  margin-top: 42px;
-  margin-left: 19.7%;
-  z-index: 10;
-}
-
 .home_page #navbar .search_bar {
   padding-left: 50px;
   padding-right: 20px;
@@ -64,9 +53,22 @@
   outline: none;
   margin-left: 19%;
   position: absolute;
-  margin-top: 35px;
+  margin-top: 36px;
   z-index: 5;
 }
+
+.home_page #navbar .search_icon {
+  width: 22px;
+  height: 22px;
+  stroke: #a9a7b3;
+  stroke-width: 2px;
+  position: absolute;
+  margin-top: 43.3px;
+  margin-left: 19.5%;
+  z-index: 10;
+}
+
+.home_page #navbar .search_icon #search_icon_responsive {  display: none; }
 
 .home_page #navbar #caddie_icon {
   width: 27px;
@@ -74,9 +76,9 @@
   stroke: #616161;
   stroke-width: 2px;
   float: right;
-  margin-top: 43px;
+  margin-top: 41px;
   cursor: pointer;
-  margin-right: 2.5%;
+  margin-right: 1%;
   background-color: transparent;
   border-color: transparent;
 }
@@ -86,9 +88,9 @@
   height: 27px;
   stroke: #616161;
   float: right;
-  margin-top: 43px;
+  margin-top: 41px;
   cursor: pointer;
-  margin-right: 17px;
+  margin-right: 15px;
   stroke-width: 2px;
   background-color: transparent;
   border-color: transparent;
@@ -104,16 +106,24 @@
   height: 100%;
   width: 400px;
   background-color: white;
-  box-shadow: 0px 0px 250px #6161615a;
+  box-shadow: 0px 0px 150px #6161615a;
   transition: all 0.5s ease-in-out; 
   z-index: 100;
   padding: 30px;
-  border-top-left-radius: 15px;
 }
 
 .home_page #navbar .sidebar h1 {
+  font-weight: 750;
+  font-size: 35px;
+  line-height: 30px;
+  margin-bottom: 10px;
+  width: 90%;
+}
+
+.home_page #navbar .sidebar .explain_text {
+  font-size: 15px;
   font-weight: 350;
-  font-size: 20px;
+  width: 90%;
 }
 
 .home_page #navbar .sidebar.open {
@@ -127,8 +137,24 @@
   background-color: transparent;
   border-color: transparent;
   cursor: pointer;
-  float: right;
-  margin-top: -35px;
+  margin-left: 385px;
+  margin-top: -15px;
+  position: fixed;
+}
+
+.home_page #navbar .sidebar .not_found_item_card {
+  margin-top: 30px;
+  padding: 20px;
+  text-align: center;
+  background-color: rgb(243, 242, 242);
+  border-radius: 15px;
+}
+
+.home_page #navbar .sidebar .not_found_item_card .smiley {
+  font-weight: 500;
+  font-size: 25px;
+  margin-bottom: -15px;
+  margin-left: 16px;
 }
 /* 🎈 End of Navbar complety style ! 🎈 */
 
